tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_check_trait_impl_for_non_type/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: expected type got function
  ┌─ src/main.nr:6:23
  │
6 │     impl Default2 for main {
  │                       ----
  │

Aborting due to 1 previous error
