tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_check_trait_impl_for_non_type/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: expected type got function
  ┌─ src/main.nr:6:23
  │
6 │     impl Default2 for main {
  │                       ----
  │

Aborting due to 1 previous error
